# DiscordAskBot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: glossary.md
docs/adr/: 0001-open-general-qa.md  0002-slash-command-only.md  0003-stateless.md  0004-python-stack.md  0005-defer-and-stream.md  0006-cost-controls.md  0007-local-first-no-docker.md  0008-chunk-long-answers.md  0009-haiku-default-configurable.md  0010-public-replies.md  0011-inflight-guard.md  0012-reply-to-continue-memory.md  0013-persistent-budget.md  0014-access-controls.md  README.md
src/: access.py  bot.py  budget.py  chunking.py  claude.py  config.py  inflight.py  memory.py
